--- a/Classic.css
+++ b/Classic.css
@@ -1,6 +1,14 @@
+body {
+	min-width: 900px;
+}
+#container {
+	width: 930px;
+	padding: 0px 15px;
+     margin: 0 auto;
+}
 #wrapper {
 	width: 900px;
-	height: 1400px;
+	height: 1310px;
 	margin: auto;
 	background-image: url(https://oboi-ma.ru/f/product/ln10812.jpg);
 	opacity: 0.7;
